force-app/main/default/objects/Student_Data__c/Student_Data__c.object-meta.xml
<CustomObject>
    <label>Student Data</label>
    <nameField>
        <label>Student Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>