force-app/main/default/objects/Student_Data__c/fields/Strength_Of_Your_Class__c.field-meta.xml
<CustomField>
    <fullName>Strength_Of_Your_Class__c</fullName>
    <label>Strength Of Your Class</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>