force-app/main/default/objects/Student_Data__c/fields/Year_Of_Studying__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Studying__c</fullName>
    <label>Year Of Studying</label>
    <length>15</length>
    <type>Text</type>
</CustomField>